@@ -62,8 +62,10 @@ Additions:
    > Soul Shackles: Tome
    > Wyvern's Fury: Weapon, Tome
    > Ice II: Tome
- - Added 112 new items:
-  ~ 10 recovery/buff items:
+ - Added 114 new items:
+  ~ 12 recovery/buff items:
+   > Offense Combination
+   > Defense Combination
    > Well-Rounded Combination
    > Large Potion
    > Large Elixir
